# Cinder

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.agent/: NOTES.md
.github/workflows/: ci.yml
.omc/: project-memory.json
.omc/sessions/: 4d4abbeb-4dd6-432b-9874-1bf6090fb4df.json  76b8a7e1-10b1-4111-a88e-87ab4257fc3c.json  8b4534d6-df73-4588-b02b-88367b61f663.json  90ff35f9-010d-4395-a443-d245f90c3074.json  ab9f7b2e-ef89-43c6-aeb6-131373cfa791.json  ca4a2bdc-9ec4-4b18-b941-c99950e16163.json  cfaef127-1a08-41ea-a3f8-3c77ffaa61f7.json  dfbdc9f6-bb21-4381-ae30-f88620629e45.json  ecf60be6-a4c2-4e13-98da-38506b79ea38.json
config/: base.yaml  dev.yaml  prod.yaml  staging.yaml
configs/paper_run/: base.yaml  dev.yaml  prod.yaml
crates/backtest/: Cargo.toml
crates/backtest/src/: lib.rs  scenarios.rs
crates/binance/: Cargo.toml
crates/binance/src/: book.rs  decode.rs  error.rs  lib.rs  live_engine.rs  order_rest.rs  rest.rs  resync.rs  spot.rs  user_stream.rs
crates/binance/testdata/: depth_snapshot.json  depth_update.json  trade.json
crates/book/: Cargo.toml
crates/book/src/: features.rs  lib.rs  vol.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/config/tests/: real_configs.rs
crates/core/: Cargo.toml
crates/core/src/: audit.rs  bus.rs  decimal.rs  lib.rs  market.rs  order.rs  time.rs  venue.rs
crates/core/tests/: proptest_order_status.rs
crates/oms/: Cargo.toml
crates/oms/src/: lib.rs  order_engine.rs
crates/paper/: Cargo.toml
crates/paper/src/: lib.rs
crates/pnl/: Cargo.toml
crates/pnl/src/: lib.rs  tax_lots.rs
crates/pnl/tests/: proptest_accountant.rs
crates/replay/: Cargo.toml
crates/replay/src/: invariants.rs  lib.rs
crates/report/: Cargo.toml
crates/report/src/: lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: clock_skew_guard.rs  clock_skew_tracker.rs  kill_switch.rs  lib.rs  pnl_guard.rs  staleness_guard.rs  venue_error_guard.rs
crates/runner/: Cargo.toml
crates/runner/src/: audit.rs  intent_log.rs  kill_switch_watch.rs  lib.rs  live.rs  live_cfg.rs  metrics.rs  paper_cfg.rs  tape.rs
crates/runner/tests/: e2e_paper_to_report.rs
crates/storage/: Cargo.toml
crates/storage/src/: clickhouse.rs  config.rs  error.rs  lib.rs  migrate.rs  orders.rs  postgres.rs
crates/storage/src/clickhouse/: migrate.rs
crates/storage/src/postgres/: migrate.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs  maker.rs
infra/compose/: docker-compose.yml
infra/migrations/clickhouse/: V001__trades.sql  V002__book_snapshots.sql  V003__book_deltas.sql  V004__fundings.sql  V005__liquidations.sql
infra/migrations/postgres/: V001__instruments_and_accounts.sql  V002__orders_and_fills.sql  V003__positions_balances_audit.sql  V004__time_in_force_post_only.sql
