[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Proprietary"
publish = false
authors = ["Arcane Labs"]

[workspace.dependencies]
# ---- error handling ----
thiserror = "1"
anyhow = "1"

# ---- serialization ----
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"

# ---- async / runtime ----
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "fs"] }
futures = "0.3"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }

# ---- storage clients ----
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

# ---- observability ----
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ---- misc ----
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# ---- testing ----
proptest = { version = "1", default-features = false, features = ["std"] }

# ---- internal crates ----
ts-core = { path = "crates/core" }
ts-config = { path = "crates/config" }
ts-storage = { path = "crates/storage" }
ts-book = { path = "crates/book" }
ts-binance = { path = "crates/binance" }
ts-risk = { path = "crates/risk" }
ts-paper = { path = "crates/paper" }
ts-strategy = { path = "crates/strategy" }
ts-oms = { path = "crates/oms" }
ts-pnl = { path = "crates/pnl" }
ts-replay = { path = "crates/replay" }
ts-backtest = { path = "crates/backtest" }
ts-runner = { path = "crates/runner" }
ts-report = { path = "crates/report" }

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1          # line-table only, keeps binary debuggable without bloat
panic = "abort"
strip = "symbols"

[profile.bench]
lto = "thin"
codegen-units = 1
debug = 1
