[package]
name = "ts-backtest"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ts-core.workspace = true
ts-oms.workspace = true
ts-replay.workspace = true
ts-strategy.workspace = true
clap.workspace = true
anyhow.workspace = true

[[bin]]
name = "ts-backtest"
path = "src/bin/ts_backtest.rs"
