[package]
name = "ts-oms"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ts-core.workspace = true
ts-book.workspace = true
ts-paper.workspace = true
ts-risk.workspace = true
ts-strategy.workspace = true
