[package]
name = "ts-replay"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ts-core.workspace = true
ts-book.workspace = true
ts-oms.workspace = true
ts-pnl.workspace = true
ts-strategy.workspace = true
