[package]
name = "ts-runner"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ts-core.workspace = true
ts-oms.workspace = true
ts-replay.workspace = true
ts-strategy.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
