[package]
name = "ts-runner"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ts-core.workspace = true
ts-oms.workspace = true
ts-replay.workspace = true
ts-strategy.workspace = true
ts-binance.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[[bin]]
name = "ts-paper-run"
path = "src/bin/ts_paper_run.rs"
