[package]
name = "ts-runner"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
ts-core = { workspace = true, features = ["serde"] }
ts-book.workspace = true
ts-config.workspace = true
ts-oms.workspace = true
ts-pnl.workspace = true
ts-replay.workspace = true
ts-risk.workspace = true
ts-strategy.workspace = true
ts-binance.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time", "signal", "fs", "io-util", "net"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
ts-report = { workspace = true }

[[bin]]
name = "ts-paper-run"
path = "src/bin/ts_paper_run.rs"

[[bin]]
name = "ts-live-run"
path = "src/bin/ts_live_run.rs"

[[bin]]
name = "ts-tape"
path = "src/bin/ts_tape.rs"
