[package]
name = "ts-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
description = "Postgres + ClickHouse clients and migration tooling for the trading system"

[dependencies]
ts-config = { workspace = true }
ts-core = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }

tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
reqwest = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

sha2 = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }

[[bin]]
name = "ts-migrate"
path = "src/bin/ts_migrate.rs"
